--- a/index.html
+++ b/index.html
@@ -27,18 +27,340 @@
   <div class="container">
     <!--header starts here-->
     <header>
-
+      <div class="wrapper">
+        <h1 class="logo">
+          <a href="index.html" title="Minimax">Minimax</a>
+        </h1>
+        <div class="hamburger">
+          <span class="icon hamburger-first">first</span>
+          <span class="icon hamburger-second">second</span>
+          <span class="icon hamburger-third">third</span>
+        </div>
+        <nav>
+          <ul>
+            <li>
+              <a href="index.html" class="hover active" title="HomeService">Home</a>
+            </li>
+            <li>
+              <a href="#FIXME" class="hover" title="Service">Service</a>
+            </li>
+            <li><a href="#FIXME" class="hover" title="About">About</a></li>
+            <li>
+              <a href="#FIXME" class="hover" title="Portfolio">Portfolio</a>
+            </li>
+            <li><a href="#FIXME" class="hover" title="Price">Price</a></li>
+            <li>
+              <a href="#FIXME" class="hover" title="Contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <!--header ends here-->
     <!--main starts here-->
     <main>
-      
+      <section class="banner">
+        <figure class="banner-background">
+          <img src="images/home-bg.jpg" alt="Banner-background">
+        </figure>
+        <div class="wrapper">
+          <div class="banner-content">
+            <span class="banner-small-heading">Welcome to</span>
+            <h2>Minimax <span class="bold">Digital Firm</span></h2>
+            <p class="banner-description">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Blanditiis similique veniam nisi maiores necessitatibus
+              accusantium ut, facere corporis officiis magnam error nesciunt,
+              quae atque sapiente numquam consequatur, voluptates ullam odio!
+            </p>
+            <div class="banner-button">
+              <a href="#FIXME" title="Get Started" class="capital">Get Started</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="workflow">
+        <div class="wrapper">
+          <h3 class="workflow-heading">Our Workflow</h3>
+          <ul class="workflow-list">
+            <li>
+              <span class="cubes workflow-img">research</span>
+              <h4>Research</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Pariatur, repellat ut illo voluptatibus ab est ipsum suscipit
+                quos veritatis iusto corrupti, nihil cum quae rem
+                perspiciatis, aut doloremque? Atque, odio.
+              </p>
+            </li>
+            <li>
+              <span class="gear workflow-img">design</span>
+              <h4>Design</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt
+                in quis delectus eius, quod ea fugit voluptates provident
+                laboriosam alias molestiae fuga ex eaque voluptatem obcaecati
+                ipsam necessitatibus
+                <a href="#FIXME" title="quas eos!">quas eos!</a>
+              </p>
+            </li>
+            <li>
+              <span class="people workflow-img">implement</span>
+              <h4>Implement</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Dolore rem distinctio odio corrupti doloribus. Repellat
+                voluptatibus consequatur natus quibusdam tempore, voluptas ea
+                dolorum. Hic necessitatibus, alias eos soluta sit reiciendis.
+              </p>
+            </li>
+          </ul>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
+      <section class="about-us">
+        <div class="wrapper">
+          <h3 class="about-us-heading">Minimax Story</h3>
+          <div class="about-us-box">
+            <figure class="about-us-img">
+              <img src="images/about-img.jpg" alt="About us">
+            </figure>
+            <div class="about-us-content">
+              <h4 class="capital">About Us</h4>
+              <span class="anout-us-small-heading">Talented Designers &amp; Developers</span>
+              <p class="about-us-description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatum rem officiis minus magni consequuntur cum amet!
+                Facere quibusdam sunt ducimus, recusandae doloremque accusamus
+                exercitationem iste harum nisi voluptatibus aperiam molestiae.
+              </p>
+              <p class="about-us-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptas, nobis neque? Minima quae est impedit blanditiis
+                ratione nam harum dolor, deserunt consequatur dignissimos, rem
+                soluta aperiam doloremque, veniam repellendus voluptates.
+              </p>
+            </div>
+          </div>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
+      <section class="team">
+        <div class="wrapper">
+          <h3 class="team-heading">People behind the film</h3>
+          <ul class="team-list">
+            <li>
+              <figure class="team-img">
+                <img src="images/team1.jpg" alt="white guy">
+              </figure>
+              <h4>Jonny Thinker</h4>
+              <span class="team-description">Creative Director</span>
+            </li>
+            <li>
+              <figure class="team-img">
+                <img src="images/team2.jpg" alt="white guy with specs">
+              </figure>
+              <h4>Michael</h4>
+              <span class="team-description">CEO/Cc-founder</span>
+            </li>
+            <li>
+              <figure class="team-img">
+                <img src="images/team3.jpg" alt="black guy">
+              </figure>
+              <h4>George Walker</h4>
+              <span class="team-description">Chief Designer</span>
+            </li>
+            <li>
+              <figure class="team-img">
+                <img src="images/team4.jpg" alt="white girl">
+              </figure>
+              <h4>Mary Sandar</h4>
+              <span class="team-description">UX Specialist</span>
+            </li>
+          </ul>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
+      <section class="portfolio">
+        <div class="wrapper">
+          <h3 class="portfolio-heading">Our Portfolio</h3>
+          <ul class="portfolio-list">
+            <li><button>All</button></li>
+            <li><button>HTML</button></li>
+            <li><button>Photoshop</button></li>
+            <li><button>Wordpress</button></li>
+            <li><button>Mobile</button></li>
+          </ul>
+          <ul class="portfolio-images">
+            <li>
+              <figure>
+                <img src="images/portfolio-img1.jpg" alt="laptop">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img2.jpg" alt="iphone">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img3.jpg" alt="macbook">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img4.jpg" alt="html">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img5.jpg" alt="phone">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img6.jpg" alt="desktop">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img7.jpg" alt="firmbee">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/portfolio-img8.jpg" alt="website">
+              </figure>
+            </li>
+          </ul>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
+      <section class="pricing">
+        <div class="wrapper">
+          <h3 class="pricing-heading">Our Pricing</h3>
+          <ul class="pricing-list">
+            <li>
+              <div class="pricing-list-top">
+                <span class="pricing-list-top-header">Starter</span>
+                <span class="pricing-list-top-description">&#36;100 per month</span>
+              </div>
+              <div class="pricing-list-bottom">
+                <span class="pricing-list-bottom-text capital">100 gb storage</span><span
+                  class="pricing-list-bottom-text capital">10 tb bandwidth</span><span
+                  class="pricing-list-bottom-text capital">10 basic themes</span><span
+                  class="pricing-list-bottom-text capital">24-hour response</span>
+                <div class="pricing-button">
+                  <a href="#FIXME" title="Sign Up">Sign Up</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="pricing-list-top">
+                <span class="pricing-list-top-header">Business</span>
+                <span class="pricing-list-top-description">&#36;350 per month</span>
+              </div>
+              <div class="pricing-list-bottom">
+                <span class="pricing-list-bottom-text capital">1000 gb storage</span><span
+                  class="pricing-list-bottom-text capital">50 tb bandwidth</span><span
+                  class="pricing-list-bottom-text capital">50 pro themes</span><span
+                  class="pricing-list-bottom-text capital">1-hour response</span>
+                <div class="pricing-button">
+                  <a href="#FIXME" title="Sign Up">Sign Up</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="pricing-list-top">
+                <span class="pricing-list-top-header">Advanced</span>
+                <span class="pricing-list-top-description">&#36;500 per month</span>
+              </div>
+              <div class="pricing-list-bottom">
+                <span class="pricing-list-bottom-text capital">2,000 gb storage</span><span
+                  class="pricing-list-bottom-text capital">10 tb bandwidth</span><span
+                  class="pricing-list-bottom-text capital">100 premium themes</span><span
+                  class="pricing-list-bottom-text capital">30-min response</span>
+                <div class="pricing-button">
+                  <a href="#FIXME" title="Sign Up">Sign Up</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="wrapper">
+          <h3 class="contact-heading">Keep in touch</h3>
+          <form action="#FIXME" method="#FIXME">
+            <div class="form-group">
+              <label for="name">
+                <input type="text" name="name" id="name" class="name" placeholder="Name">
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="email">
+                <input type="text" name="email" id="email" class="email" placeholder="Email">
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="subject">
+                <input type="text" name="subject" id="subject" class="subject" placeholder="Subject">
+              </label>
+            </div>
+            <div class="form-group">
+              <textarea name="message" class="message" cols="30" rows="10" placeholder="Message"></textarea>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              quo aliquam
+            </p>
+            <input type="submit" value="SEND MESSAGE" class="contact-button">
+          </form>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+      </section>
     </main>
     <!--main ends here-->
 
     <!--footer starts here-->
     <footer>
-      
+      <div class="wrapper">
+        <div class="footer-top">
+          <div class="office">
+            <h5>Our Office</h5>
+            <address>101 Clean Street, California, CA 10110</address>
+            <span>Email:
+              <a class="bold" href="mailto:hello@company.com">hello@company.com</a></span>
+            <span>Phone:
+              <a class="bold" href="tel:+010-020-0340">010-020-0340</a></span>
+          </div>
+          <div class="social">
+            <h5>Social Us</h5>
+            <ul class="social-list">
+              <li class="footericon facebook">
+                <a href="#FIXME" rel="noopener noreferrer" title="Facebook" target="_blank">Facebook</a>
+              </li>
+              <li class="footericon twitter">
+                <a href="#FIXME" rel="noopener noreferrer" title="Twitter" target="_blank">Twitter</a>
+              </li>
+              <li class="footericon google">
+                <a href="#FIXME" rel="noopener noreferrer" title="Google" target="_blank">Google</a>
+              </li>
+              <li class="footericon dribble">
+                <a href="#FIXME" rel="noopener noreferrer" title="Dribble" target="_blank">Dribble</a>
+              </li>
+            </ul>
+          </div>
+          <span class="hidden-text">hidden-text</span>
+        </div>
+        <div class="footer-bottom">
+          <p>
+            Copyright &copy; 2016 Minimax Digital Firm - Design:
+            <a href="#FIXME" title="Tooplate">Tooplate</a>
+          </p>
+        </div>
+      </div>
     </footer>
     <!--footer ends here-->
   </div>
