--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="index.html" class="hover active" title="HomeService">Home</a>
             </li>
             <li>
-              <a href="#FIXME" class="hover" title="Service">Segit rvice</a>
+              <a href="#FIXME" class="hover" title="Service">Service</a>
             </li>
             <li><a href="#FIXME" class="hover" title="About">About</a></li>
             <li>
